--- a/client/global.css
+++ b/client/global.css
@@ -5,6 +5,7 @@
   padding-left: 1em;
   padding-right: 1em;
 }
+
 .custom-bullet::before {
   content: '';
   position: absolute;
@@ -16,6 +17,7 @@
   border-radius: 9999px;
   display: inline-block;
 }
+
 /* SF Pro Display self-hosted font faces */
 @font-face {
   font-family: 'SF Pro Display';
@@ -24,6 +26,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYULTRALIGHTITALIC.OTF') format('opentype');
@@ -31,6 +34,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYLIGHTITALIC.OTF') format('opentype');
@@ -38,6 +42,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
@@ -45,6 +50,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYMEDIUM.OTF') format('opentype');
@@ -52,6 +58,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYBOLD.OTF') format('opentype');
@@ -59,6 +66,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYBLACKITALIC.OTF') format('opentype');
@@ -66,6 +74,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYHEAVYITALIC.OTF') format('opentype');
@@ -73,6 +82,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'SF Pro Display';
   src: url('/fonts/SFPRODISPLAYSEMIBOLDITALIC.OTF') format('opentype');
@@ -80,6 +90,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 /** @import must precede all other statements */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
@@ -91,6 +102,7 @@
 @tailwind utilities;
 
 @layer base {
+
   /**
    * Tailwind CSS theme
    * tailwind.config.ts expects the following color variables to be expressed as HSL values.
@@ -189,6 +201,6 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
   }
 }
